--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "dependencies": {
     "@ant-design/colors": "^7.1.0",
     "@ant-design/nextjs-registry": "^1.0.1",
+    "@auth/mongodb-adapter": "^3.4.2",
     "antd": "^5.20.3",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.6.0",
     "next": "14.2.6",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18"
   },
