--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@ant-design/colors": "^7.1.0",
     "@ant-design/nextjs-registry": "^1.0.1",
     "@auth/mongodb-adapter": "^3.4.2",
+    "@react-pdf/renderer": "^3.4.4",
     "antd": "^5.20.3",
+    "bcrypt": "^5.1.1",
     "mongodb": "^6.8.0",
     "mongoose": "^8.6.0",
     "next": "14.2.6",
@@ -21,6 +23,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
